Trying to fix the MATLAB text bleed

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -105,7 +105,7 @@ header h2 {
 a.button {
   display: block;
   float: left;
-  width: 179px;
+  width: 190px;
   padding: 12px 8px 12px 8px;
   margin-right: 14px;
   font-size: 15px;
